[gd_scene load_steps=3 format=3 uid="uid://bohi3ulb0ydrg"]

[ext_resource type="Script" path="res://EnemyOrigin.gd" id="1_8x0ih"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o6wji"]

[node name="EnemyOrigin" type="Node2D"]
script = ExtResource("1_8x0ih")

[node name="OriginArea" type="Area2D" parent="."]

[node name="OriginCollision" type="CollisionShape2D" parent="OriginArea"]
shape = SubResource("CircleShape2D_o6wji")

[connection signal="body_entered" from="OriginArea" to="." method="_on_origin_area_body_entered"]
[connection signal="body_exited" from="OriginArea" to="." method="_on_origin_area_body_exited"]
